1.5/svc-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: netology
spec:
  type: NodePort
  selector:
    app: app-backend
  ports:
    - name: multitool-http
      protocol: TCP
      port: 9002
      targetPort: 8080
...
