1.5/svc-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: netology
spec:
  type: NodePort
  selector:
    app: app-frontend
  ports:
    - name: multitool-http
      protocol: TCP
      port: 9001
      targetPort: 80
...
