1.5/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: netology.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-backend
            port:
              number: 9002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-frontend
            port:
              number: 9001
...
